--- a/css/style.css
+++ b/css/style.css
@@ -2377,9 +2377,14 @@ main {
 }
 
 .product-modal__wrapper {
-  text-align: center;
-  font-size: 1.5rem;
-  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5rem;
 }
 
 .modal-overlay {
