--- a/src/app/(frontend)/scss/style.scss
+++ b/src/app/(frontend)/scss/style.scss
@@ -382,9 +382,9 @@ main {
 
 .product-modal {
   &__wrapper {
-    text-align: center;
-    font-size: toRem(24);
-    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    gap: toRem(24);
   }
 }
 
