--- a/src/app/(frontend)/scss/components/_about-us.scss
+++ b/src/app/(frontend)/scss/components/_about-us.scss
@@ -79,7 +79,7 @@
     img {
       object-fit: cover !important;
       object-position: 38% center !important;
-      width: 100%;
+      min-width: 100%;
 
       @media (min-width: 47em) {
         object-position: center !important;
