--- a/src/app/(frontend)/scss/components/_images-slider.scss
+++ b/src/app/(frontend)/scss/components/_images-slider.scss
@@ -67,7 +67,7 @@
   display: flex;
   align-items: center;
   gap: toRem(12);
-  min-width: 100%;
+  max-width: 100%;
 
   // .slider-block__block
 
@@ -82,7 +82,6 @@
   &__wrapper {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: toRem(8);
     flex-wrap: nowrap;
   }
@@ -93,6 +92,7 @@
     overflow: hidden;
     aspect-ratio: 90 / 56;
     max-height: toRem(56);
+    max-width: toRem(90);
     border-radius: 4px;
     flex-shrink: 0;
     border: 2px solid transparent;
@@ -101,12 +101,13 @@
     @media (min-width: 47em) {
       max-height: toRem(85);
       aspect-ratio: 160 / 85;
+      max-width: toRem(160);
     }
 
     @media (min-width: 75em) {
       max-height: toRem(86);
       aspect-ratio: 206 / 86;
-      width: 100%;
+      max-width: toRem(206);
     }
   }
   &__image-wrapper--border {
@@ -114,7 +115,7 @@
   }
 
   &__image {
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     object-fit: cover;
   }
