--- a/src/app/(frontend)/scss/components/_welcome-section.scss
+++ b/src/app/(frontend)/scss/components/_welcome-section.scss
@@ -154,29 +154,29 @@
 
   // .img-block__bg
 
-  &__bg {
-    position: absolute;
+  // &__bg {
+  //   position: absolute;
 
-    top: toRem(-30);
-    right: toRem(-60);
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
+  //   top: toRem(-30);
+  //   right: toRem(-60);
+  //   object-fit: contain;
+  //   width: 100%;
+  //   height: 100%;
 
-    @media (min-width: 47em) {
-      top: toRem(-70);
-      right: toRem(-90);
-    }
+  //   @media (min-width: 47em) {
+  //     top: toRem(-70);
+  //     right: toRem(-90);
+  //   }
 
-    @media (min-width: 57em) {
-      top: toRem(-75);
-    }
+  //   @media (min-width: 57em) {
+  //     top: toRem(-75);
+  //   }
 
-    @media (min-width: 62em) {
-      top: toRem(-40);
-      right: toRem(-70);
-    }
-  }
+  //   @media (min-width: 62em) {
+  //     top: toRem(-40);
+  //     right: toRem(-70);
+  //   }
+  // }
 }
 
 .select--hero {
