--- a/css/style.css
+++ b/css/style.css
@@ -2321,6 +2321,23 @@ main {
           flex-grow: 0;
 }
 
+.button--link {
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media (min-width: 60em) {
+  .button--link {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
+
 .embla__arrow-left svg {
   rotate: 180deg;
 }
